# melby-sama

./: .env.example  .gitignore  README.md  output.txt  pyproject.toml
src/: config.py  lore.txt  main.py
src/utils/: audio_handler.py  livechat_retrieval.py  subtitle.py  video_handler.py  vtube_studio_handler.py
